examples/v0.1/errors/undeclared.nova
age = 19

// Expected: Variable 'age' is not declared.